syntax = "proto3";

package gameplay;

message HelpCureAnimalRequest {
    string userId = 1;
    string neighborUserId = 2;
}