syntax = "proto3";

import "google/protobuf/empty.proto";

package gameplay_service;

message CollectAnimalProductRequest {
    string userId = 1;
    string placedItemAnimalId = 2;
}